JWT Extended Implementation commit

--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,8 @@ verify_ssl = true
 flask = "*"
 pyyaml = "*"
 flask-restful = "*"
-flask-jwt = "*"
 flask-sqlalchemy = "*"
+flask-jwt-extended = "*"
 
 [requires]
 python_version = "3.7"
